add em-space, more docs and update grammar

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -139,42 +139,42 @@ Some basic words to get you started on sentence construction.
 
 #### Choose a subject:
 <HisyeoTabs>
-   <p>noyo <em>I</em></p>
-   <p>nimü <em>you</em></p>
-   <p>nü   <em>we</em></p>
-   <p>niün <em>they</em></p>
+   <p>noyo&emsp;<em>I</em></p>
+   <p>nimü&emsp;<em>you</em></p>
+   <p>nü&emsp;<em>we</em></p>
+   <p>niün&emsp;<em>they</em></p>
 </HisyeoTabs>
 
 #### Choose a verb:
 <HisyeoTabs>
-   <p>köto   <em>to say</em></p>
-   <p>monodo <em>to meet</em></p>
-   <p>mokon  <em>to eat</em></p>
-   <p>vısun  <em>to know</em></p>
+   <p>köto&emsp;<em>to say</em></p>
+   <p>monodo&emsp;<em>to meet</em></p>
+   <p>mokon&emsp;<em>to eat</em></p>
+   <p>vısun&emsp;<em>to know</em></p>
 </HisyeoTabs>
 
 #### Choose an object:
 <HisyeoTabs>
-   <p>ulyö   <em>that</em></p>
-   <p>küöxı  <em>fruit</em></p>
-   <p>pioli  <em>hello</em></p>
-   <p>sütüö  <em>friend</em></p>
+   <p>ulyö&emsp;<em>that</em></p>
+   <p>küöxı&emsp;<em>fruit</em></p>
+   <p>pioli&emsp;<em>hello</em></p>
+   <p>sütüö&emsp;<em>friend</em></p>
 </HisyeoTabs>
 
 #### Choose a sentence ender:
 <HisyeoTabs>
-   <p>lötven <em>polite</em></p>
-   <p>voxo   <em>surprise</em></p>
-   <p>ko     <em>question</em></p>
-   <p>löicök <em>confirmation</em></p>
+   <p>lötven&emsp;<em>polite</em></p>
+   <p>voxo&emsp;<em>surprise</em></p>
+   <p>ko&emsp;<em>question</em></p>
+   <p>löicök&emsp;<em>confirmation</em></p>
    <p><em>or none</em></p>
 </HisyeoTabs>
 
 #### Now, make a sentence...
 
 <HisyeoTabs>
-   <p>noyo mokon küöxı <em>I eat fruit</em></p>
-   <p>nimü vısun sütüö noyo ko <em>Do you know my friend?</em></p>
+   <p>noyo mokon küöxı&emsp;<em>I eat fruit</em></p>
+   <p>nimü vısun sütüö noyo ko&emsp;<em>Do you know my friend?</em></p>
 </HisyeoTabs>
 
 ## Next Steps
