--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -80,18 +80,18 @@ wet so that you can begin your immersion training.
 The following are some of the current established expressions that Hisyëans use
 in day-to-day conversation:
 <HisyeoTabs>
-    <p>voxo. <em>woah!</em></p>
-    <p>nü küu lı lö. <em>Let's go!</em></p>
-    <p>nimü pı zık. <em>How are you doing?</em></p>
-    <p>noyo pı xön. <em>I am good.</em></p>
-    <p>lono nimü lı si gö pı zık. <em>How has your day been?</em></p>
-    <p>pı yök xön. <em>Not good.</em></p>
-    <p>zık lı yonlüs. <em>What's wrong?</em></p>
-    <p>lı yök sonkon <em>It doesn't matter.</em></p>
-    <p>küu yünlön noyo. <em>Sorry!</em></p>
-    <p>küu lı yök cinzon. <em>Don't worry!</em></p>
-    <p>lı yök ixölö. <em>It's not a problem.</em></p>
-    <p>noyo köi di hoi limien ko. <em>Can I come in?</em></p>
+    <p>voxo.&emsp;<em>woah!</em></p>
+    <p>nü küu lı lö.&emsp;<em>Let's go!</em></p>
+    <p>nimü pı zık.&emsp;<em>How are you doing?</em></p>
+    <p>noyo pı xön.&emsp;<em>I am good.</em></p>
+    <p>lono nimü lı si gö pı zık.&emsp;<em>How has your day been?</em></p>
+    <p>pı yök xön.&emsp;<em>Not good.</em></p>
+    <p>zık lı yonlüs.&emsp;<em>What's wrong?</em></p>
+    <p>lı yök sonkon&emsp;<em>It doesn't matter.</em></p>
+    <p>küu yünlön noyo.&emsp;<em>Sorry!</em></p>
+    <p>küu lı yök cinzon.&emsp;<em>Don't worry!</em></p>
+    <p>lı yök ixölö.&emsp;<em>It's not a problem.</em></p>
+    <p>noyo köi di hoi limien ko.&emsp;<em>Can I come in?</em></p>
 </HisyeoTabs>
 :::
 
