--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -192,13 +192,13 @@ Besides <HisyeoWord is='kut'/> for singular, these are the words used for
 plurality
 
 <HisyeoTabs>
-  <p>püzök <em>lack</em> <span>➖☹️</span></p>
-  <p>mënüs <em>fewer/less</em> <span>➖➖</span></p>
-  <p>yoüti <em>some/few</em> <span>➖</span></p>
-  <p>zötëstö <em>sufficient/enough</em> <span>🙂</span></p>
-  <p>ëto <em>many/much</em> <span>➕</span></p>
-  <p>eswen <em>more</em> <span>➕➕</span></p>
-  <p>otıkon <em>excess</em> <span>➕☹️</span></p>
+  <p>püzök&emsp;<em>lack</em> <span>➖☹️</span></p>
+  <p>mënüs&emsp;<em>fewer/less</em> <span>➖➖</span></p>
+  <p>yoüti&emsp;<em>some/few</em> <span>➖</span></p>
+  <p>zötëstö&emsp;<em>sufficient/enough</em> <span>🙂</span></p>
+  <p>ëto&emsp;<em>many/much</em> <span>➕</span></p>
+  <p>eswen&emsp;<em>more</em> <span>➕➕</span></p>
+  <p>otıkon&emsp;<em>excess</em> <span>➕☹️</span></p>
 </HisyeoTabs>
 :::
 
@@ -266,7 +266,7 @@ can use a day as a condition in a hön prepositional phrase:
 Asking what day of the week it is can be done by asking what color of day:
 
 <HisyeoTabs>
-  <p>lono övo lı longı zık. <em>"What day is today?"</em></p>
+  <p>lono övo lı longı zık.&emsp;<em>"What day is today?"</em></p>
 </HisyeoTabs>
 
 ### Months of the Year
@@ -348,8 +348,8 @@ use xünyu preceding the final year digit. If you are referring to a
 recent date, you can often just mention the final segment.
 
 <HisyeoTabs>
-  <p>dus tiso xëti dus xëti <em>1977</em></p>
-  <p>son xünyu son <em>303</em></p>
+  <p>dus tiso xëti dus xëti&emsp;<em>1977</em></p>
+  <p>son xünyu son&emsp;<em>303</em></p>
 </HisyeoTabs>
       
 To say dates in "BC" or "BCE", use the phrase yë ılık zızıme sodolun.
@@ -436,8 +436,8 @@ To ask the time, you use the copula with a null subject. The complement uses the
 interrogative pronoun, so there is no need for a sentence ender.
 
 <HisyeoTabs>
-  <p>nı lı woküt zık. <em>"What time is it?"</em></p>
-  <p>nı lı suhot zık. <em>"What hour is it?"</em></p>
+  <p>nı lı woküt zık.&emsp;<em>"What time is it?"</em></p>
+  <p>nı lı suhot zık.&emsp;<em>"What hour is it?"</em></p>
 </HisyeoTabs>
 
 Often times, <HisyeoWord is='nı'/> is omitted because it is often easy to
@@ -448,12 +448,12 @@ other cases, it ends up being the prior sentence's subject. Here's some examples
 of how to respond to these questions:
 
 <HisyeoTabs>
-  <p>lı kut <em>"It is one"</em></p>
-  <p>lı suhot kut <em>"It is one o'clock"</em></p>
-  <p>lı suhot dus <em>"It is ten o'clock"</em></p>
-  <p>lı suhot pole <em>"It is twelve o'clock"</em></p>
-  <p>lı lono mutyu <em>"It is noon"</em></p>
-  <p>lı pıtün mutyu <em>"It is midnight"</em></p>
+  <p>lı kut&emsp;<em>"It is one"</em></p>
+  <p>lı suhot kut&emsp;<em>"It is one o'clock"</em></p>
+  <p>lı suhot dus&emsp;<em>"It is ten o'clock"</em></p>
+  <p>lı suhot pole&emsp;<em>"It is twelve o'clock"</em></p>
+  <p>lı lono mutyu&emsp;<em>"It is noon"</em></p>
+  <p>lı pıtün mutyu&emsp;<em>"It is midnight"</em></p>
 </HisyeoTabs>
 
 Hisyëö uses the 12-hour clock to reduce the need for multiple word ordinals to
@@ -461,20 +461,20 @@ create times like "23:00". Often times, you can deduce which half of the day
 from context. If you need to use the equivalent of "a.m." or "p.m":
 
 <HisyeoTabs>
-  <p>suhot tiso yë ılık lono mutyu <em>"9 o'clock before noon"</em></p>
-  <p>suhot tiü yë cıhöü lono mutyu <em>"9 o'clock after noon"</em></p>
+  <p>suhot tiso yë ılık lono mutyu&emsp;<em>"9 o'clock before noon"</em></p>
+  <p>suhot tiü yë cıhöü lono mutyu&emsp;<em>"9 o'clock after noon"</em></p>
 </HisyeoTabs>
 
 For some specific times with importance, here's how to translate:
 
 <HisyeoTabs>
-  <p>woküt kon socok lono <em>"morning time"</em></p>
-  <p>woküt yë cöüvon kut <em>"breakfast time"</em></p>
-  <p>woküt yë cöüvon mutyu <em>"lunch time"</em></p>
-  <p>woküt yë cöüvon vëlcin <em>"dinner time"</em></p>
-  <p>woküt yë küon nëös <em>"dawn"</em></p>
-  <p>woküt yë küon könyëc <em>"dusk"</em></p>
-  <p>woküt kon conzodo <em>"bedtime"</em></p>
+  <p>woküt kon socok lono&emsp;<em>"morning time"</em></p>
+  <p>woküt yë cöüvon kut&emsp;<em>"breakfast time"</em></p>
+  <p>woküt yë cöüvon mutyu&emsp;<em>"lunch time"</em></p>
+  <p>woküt yë cöüvon vëlcin&emsp;<em>"dinner time"</em></p>
+  <p>woküt yë küon nëös&emsp;<em>"dawn"</em></p>
+  <p>woküt yë küon könyëc&emsp;<em>"dusk"</em></p>
+  <p>woküt kon conzodo&emsp;<em>"bedtime"</em></p>
 </HisyeoTabs>
 
 Now you can say many things about the time of day or describe when things occur.
@@ -482,7 +482,7 @@ In order to give any sentence a time that it occurred, we use the hoi
 preposition.
 
 <HisyeoTabs>
-  <p>cöüvon kut lı könyëc hoi tukwos <em>"Breakfast is ending at 8"</em></p>
+  <p>cöüvon kut lı könyëc hoi tukwos&emsp;<em>"Breakfast is ending at 8"</em></p>
 </HisyeoTabs>
 
 ### Durations
@@ -492,8 +492,8 @@ normal approach for creating plurality: provide the number words in the
 determiner slot (left side of the head word).
 
 <HisyeoTabs>
-  <p>nimü yünyoü son suhot <em>"You have three hours"</em></p>
-  <p>tüu ulyö puswen kut suhot <em>"That task needs an hour"</em></p>
+  <p>nimü yünyoü son suhot&emsp;<em>"You have three hours"</em></p>
+  <p>tüu ulyö puswen kut suhot&emsp;<em>"That task needs an hour"</em></p>
 </HisyeoTabs>
 
 Most of the time when we are referring to time, we think of it as a specific
@@ -503,7 +503,7 @@ a duration/length of time we use a different particle meant for distances and
 durations.
 
 <HisyeoTabs>
-  <p>nü tüu si lon nonkü suhot <em>"We did that for four hours"</em></p>
+  <p>nü tüu si lon nonkü suhot&emsp;<em>"We did that for four hours"</em></p>
 </HisyeoTabs>
 
 ### Exact Times
@@ -512,7 +512,7 @@ If you need to talk about specific times within an hour, there is a base
 modifier content word that does double duty as a time unit for minutes.
 
 <HisyeoTabs>
-  <p>ke lı gö pı tölki lon tiü ëvun <em>"It will only be 5 minutes"</em></p>
+  <p>ke lı gö pı tölki lon tiü ëvun&emsp;<em>"It will only be 5 minutes"</em></p>
 </HisyeoTabs>
 
 ## Measurements
@@ -526,8 +526,8 @@ clarity, let's use the agentive verb noun particle to create a meaning of
 "one-er" or something whose state is primarily about oneness.
 
 <HisyeoTabs>
-  <p>hondon lı öni kut sokovü yë di volo möi et yë zomi. <em>"The family is the most basic unit of society."</em></p>
-  <p>küngiyo ondo do lı ëo vunlit ölë cızi müt düi yodo son öni kut. <em>"The company plans to split into two or three units."</em></p>
+  <p>hondon lı öni kut sokovü yë di volo möi et yë zomi.&emsp;<em>"The family is the most basic unit of society."</em></p>
+  <p>küngiyo ondo do lı ëo vunlit ölë cızi müt düi yodo son öni kut.&emsp;<em>"The company plans to split into two or three units."</em></p>
 </HisyeoTabs>
 
 Other than the time words, the rest of the measurement units are done by just
@@ -536,7 +536,7 @@ referring to what kind of measurement the unit is for.
 ### Temperature
 
 <HisyeoTabs>
-  <p>ximu di vıldonpun hoi kut viyën cëö yë tüt. <em>"Water boils at 100 degrees Celsius."</em></p>
+  <p>ximu di vıldonpun hoi kut viyën cëö yë tüt.&emsp;<em>"Water boils at 100 degrees Celsius."</em></p>
 </HisyeoTabs>
 
 Since "Celcius" and "Fahrenheit" are names, you can use these if needed. The
