--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -161,22 +161,22 @@ English, this represents nearly all of the senses of the word "from" (except for
 differentiation and causation).
 
 <HisyeoTabs>
-  <p>noyo döstoc lipü in luvono sün sıskın moskül noyo. <em>I got a letter from my brother.</em></p>
-  <p>nimü köi döstoc yök vısun nëös sün nec öni tüek nucoto. <em>You can't get all your news from the Internet.</em></p>
-  <p>tömös övo sün dus eson tukwos dus. <em>This manuscript is from the 1980s.</em></p>
-  <p>niün yünyoü si tömös do hoı zomo mulö sün sokovü müt sopoi. <em>He had books piled from floor to ceiling.</em></p>
-  <p>niün lı si cok hoi lono xopëk sün sınsi Xıkogö. <em>He departed yesterday from Chicago.</em></p>
-  <p>küu pono pı öpöstü sün pëlëtë. <em>Face away from the wall!</em></p>
+  <p>noyo döstoc lipü in luvono sün sıskın moskül noyo.&emsp;<em>I got a letter from my brother.</em></p>
+  <p>nimü köi döstoc yök vısun nëös sün nec öni tüek nucoto.&emsp;<em>You can't get all your news from the Internet.</em></p>
+  <p>tömös övo sün dus eson tukwos dus.&emsp;<em>This manuscript is from the 1980s.</em></p>
+  <p>niün yünyoü si tömös do hoı zomo mulö sün sokovü müt sopoi.&emsp;<em>He had books piled from floor to ceiling.</em></p>
+  <p>niün lı si cok hoi lono xopëk sün sınsi Xıkogö.&emsp;<em>He departed yesterday from Chicago.</em></p>
+  <p>küu pono pı öpöstü sün pëlëtë.&emsp;<em>Face away from the wall!</em></p>
   <p>lono kon wëloı sün suhot eson müt suhot tiü.<em>The working day runs from 9 am to 5 pm.</em></p>
-  <p>köi celël oxon doinpi sün lono dus xëti yë wuto xëti. <em>Tickets are available from 17th July.</em></p>
-  <p>düstu tönkö nimü sün kut müt dus. <em>Rate your pain from 1 to 10.</em></p>
-  <p>küu socok do köto mikdol sün kut. <em>Start counting from 1.</em></p>
-  <p>nimü köi pëüdo ozüul sün söhoük müt kon cukto. <em>You can study anything from math to literature.</em></p>
-  <p>küu dënëmëk do dëko nı sün pındü niün yë dëko. <em>Try to see it from his point of view.</em></p>
-  <p>sün mulö yë nıwos küon ü nimü pı yoüti köi dëko pümi yë cënpö möi. <em>From the top of the lighthouse you can just see the mainland.</em></p>
-  <p>düi dus sün son dus kut di önsu. <em>20 from 31 leaves 11.</em></p>
-  <p>lipü gelmıs yë voko mevüs lono pı yotkuwo pön do lı mevüs sün lozö yë pinton lono. <em>A parasol protects from the sun's rays.</em></p>
-  <p>köson nı sün ülögun nulun sëlpö sovin. <em>It's made from pure gold.</em></p>
+  <p>köi celël oxon doinpi sün lono dus xëti yë wuto xëti.&emsp;<em>Tickets are available from 17th July.</em></p>
+  <p>düstu tönkö nimü sün kut müt dus.&emsp;<em>Rate your pain from 1 to 10.</em></p>
+  <p>küu socok do köto mikdol sün kut.&emsp;<em>Start counting from 1.</em></p>
+  <p>nimü köi pëüdo ozüul sün söhoük müt kon cukto.&emsp;<em>You can study anything from math to literature.</em></p>
+  <p>küu dënëmëk do dëko nı sün pındü niün yë dëko.&emsp;<em>Try to see it from his point of view.</em></p>
+  <p>sün mulö yë nıwos küon ü nimü pı yoüti köi dëko pümi yë cënpö möi.&emsp;<em>From the top of the lighthouse you can just see the mainland.</em></p>
+  <p>düi dus sün son dus kut di önsu.&emsp;<em>20 from 31 leaves 11.</em></p>
+  <p>lipü gelmıs yë voko mevüs lono pı yotkuwo pön do lı mevüs sün lozö yë pinton lono.&emsp;<em>A parasol protects from the sun's rays.</em></p>
+  <p>köson nı sün ülögun nulun sëlpö sovin.&emsp;<em>It's made from pure gold.</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
@@ -201,96 +201,96 @@ entry](https://en.wiktionary.org/wiki/for).
 
 1. ⛔ Towards; in the direction of. 
 <HisyeoTabs>
-  <p>umo kösmö lı lö müt müësi. <em>The astronauts headed for the moon.</em></p>
-  <p>küu lı lö pı viki müt pümi töxütsı. <em>Run for the hills!</em></p>
-  <p>niün lı lö müt zınkon hön woküt vos niün punyentoc si hoi. <em>He was headed for the door when he remembered.</em></p>
+  <p>umo kösmö lı lö müt müësi.&emsp;<em>The astronauts headed for the moon.</em></p>
+  <p>küu lı lö pı viki müt pümi töxütsı.&emsp;<em>Run for the hills!</em></p>
+  <p>niün lı lö müt zınkon hön woküt vos niün punyentoc si hoi.&emsp;<em>He was headed for the door when he remembered.</em></p>
 </HisyeoTabs>
 2. ✅ Directed at; intended to belong to.
 <HisyeoTabs>
-  <p>noyo yünyoü vın oxon nimü <em>I have something for you.</em></p>
+  <p>noyo yünyoü vın oxon nimü&emsp;<em>I have something for you.</em></p>
 </HisyeoTabs>
 3. ✅ In order to help, benefit, gratify, honor etc. (someone or something). 
 <HisyeoTabs>
-  <p>hön möi vın vos noyo tüu, ü noyo tüu oxon nimü. <em>Everything I do, I do for you.</em></p>
-  <p>nü yünyoü köndodü yë lono kon lözic oxon umo Zëenıt. <em>We're having a birthday party for Janet.</em></p>
-  <p>öni pöklön cüdo si köto in ondo oxon köndodü kon cüdo yöüli. <em>The mayor gave a speech for the charity gala.</em></p>
+  <p>hön möi vın vos noyo tüu, ü noyo tüu oxon nimü.&emsp;<em>Everything I do, I do for you.</em></p>
+  <p>nü yünyoü köndodü yë lono kon lözic oxon umo Zëenıt.&emsp;<em>We're having a birthday party for Janet.</em></p>
+  <p>öni pöklön cüdo si köto in ondo oxon köndodü kon cüdo yöüli.&emsp;<em>The mayor gave a speech for the charity gala.</em></p>
 </HisyeoTabs>
 4. ✅ Befitting of someone’s beliefs, needs, wants, skills, or tastes; best suited to.
 <HisyeoTabs>
-  <p>hön vos do wëko mokon hoi zuko pı dündon, lı eswen en vos nimü köi tüu, pinë wëloı övo oxon yök nimü. <em>If having to bag the groceries correctly is more than you can handle, then this isn't the job for you.</em></p>
+  <p>hön vos do wëko mokon hoi zuko pı dündon, lı eswen en vos nimü köi tüu, pinë wëloı övo oxon yök nimü.&emsp;<em>If having to bag the groceries correctly is more than you can handle, then this isn't the job for you.</em></p>
 </HisyeoTabs>
 5. ✅ To be used or treated in a stated way, or with a stated purpose.
 <HisyeoTabs>
-  <p>övo lı gongoxi ülögun nëös oxon oütö gisgül noyo. <em>This is a new bell for my bicycle.</em></p>
-  <p>piek süwit onö oxon köndodü yë üsën dizël yë umo Tomu moliyü Helen. <em>The cake is for Tom and Helen's anniversary.</em></p>
-  <p>küöxı övo hoi övo oxon do mokon. dizel oxon do lı ëo vonmot. <em>These apples here are for eating. The rest are for throwing away.</em></p>
+  <p>övo lı gongoxi ülögun nëös oxon oütö gisgül noyo.&emsp;<em>This is a new bell for my bicycle.</em></p>
+  <p>piek süwit onö oxon köndodü yë üsën dizël yë umo Tomu moliyü Helen.&emsp;<em>The cake is for Tom and Helen's anniversary.</em></p>
+  <p>küöxı övo hoi övo oxon do mokon. dizel oxon do lı ëo vonmot.&emsp;<em>These apples here are for eating. The rest are for throwing away.</em></p>
 </HisyeoTabs>
 6. ✅ Supporting, in favour of. (Antonym: against)
 <HisyeoTabs>
-  <p>noi möi umo do oxon pësnëhot, küu lı ëo lö pı mulö ölë züngö nimü. <em>All those for the motion, raise your hands.</em></p>
-  <p>zık oxon mozün pukü. <em>Who's for ice-cream?</em></p>
-  <p>noyo oxon do lı lö vio oütö kiskö. <em>I'm for going by train.</em></p>
-  <p>dus göcidon si oxon moliyü son dën. <em>Ten voted for, and three against. (with implied object)</em></p>
+  <p>noi möi umo do oxon pësnëhot, küu lı ëo lö pı mulö ölë züngö nimü.&emsp;<em>All those for the motion, raise your hands.</em></p>
+  <p>zık oxon mozün pukü.&emsp;<em>Who's for ice-cream?</em></p>
+  <p>noyo oxon do lı lö vio oütö kiskö.&emsp;<em>I'm for going by train.</em></p>
+  <p>dus göcidon si oxon moliyü son dën.&emsp;<em>Ten voted for, and three against. (with implied object)</em></p>
 </HisyeoTabs>
 7. ⛔ Because of. 
 <HisyeoTabs>
   <p>niün moskül pit köto yök vos niün zütö nı, moliyü nënko ulyö ü niün wohi pëmon yök do lı yöüli müt niün moskül.<em>He wouldn't apologize; and just for that, she refused to help him.</em></p>
-  <p>niün lı xoinpo pı dëko pı xön eswen nënko do nocido si pügot.  <em>He looks better for having lost weight. (UK usage)</em></p>
-  <p>noyo süko niün nënko ëto mötivö. <em>I like her for lots of reasons.</em></p>
+  <p>niün lı xoinpo pı dëko pı xön eswen nënko do nocido si pügot.&emsp;<em>He looks better for having lost weight. (UK usage)</em></p>
+  <p>noyo süko niün nënko ëto mötivö.&emsp;<em>I like her for lots of reasons.</em></p>
 </HisyeoTabs>
 8. ✅ Intended to cure, remove or counteract; in order to cure, remove or counteract.
 <HisyeoTabs>
-  <p>cigilsu in mokon oxon hüstun nimü. <em>This medicine is for your cough.</em></p>
-  <p>noyo puswen do ıspulyol nozi hoi nıwos oxon müxi mitmo nomü. <em>I need to spray my house for termites.</em></p>
+  <p>cigilsu in mokon oxon hüstun nimü.&emsp;<em>This medicine is for your cough.</em></p>
+  <p>noyo puswen do ıspulyol nozi hoi nıwos oxon müxi mitmo nomü.&emsp;<em>I need to spray my house for termites.</em></p>
 </HisyeoTabs>
 9. ⛔ Over (a period of time). 
 <HisyeoTabs>
-  <p>noyo nıwos hoi övo lon son üsën. <em>I've lived here for three years.</em></p>
-  <p>niün köntësto lon yoüti lono hön nüyo kon cukto mitetën. <em>They fought for days over a silly pencil.</em></p>
+  <p>noyo nıwos hoi övo lon son üsën.&emsp;<em>I've lived here for three years.</em></p>
+  <p>niün köntësto lon yoüti lono hön nüyo kon cukto mitetën.&emsp;<em>They fought for days over a silly pencil.</em></p>
 </HisyeoTabs>
 10. ⛔ Throughout or across (a distance in space). 
 <HisyeoTabs>
-  <p>noyo köi dëko lon yoüti öni kut cënpö yë zoük. <em>I can see for miles.</em></p>
+  <p>noyo köi dëko lon yoüti öni kut cënpö yë zoük.&emsp;<em>I can see for miles.</em></p>
 </HisyeoTabs>
 11. ⛔ Used to introduce a subject of a to-infinitive clause.
 <HisyeoTabs>
-  <p>vos öni vıyüxit nü cüdo yök muni oksiös nü, lı yök üsowo. <em>It is unreasonable for our boss to withhold our wages.</em></p>
-  <p>noyo pı tölki völun vos nimü lı xowosë. <em>All I want is for you to be happy.</em></p>
+  <p>vos öni vıyüxit nü cüdo yök muni oksiös nü, lı yök üsowo.&emsp;<em>It is unreasonable for our boss to withhold our wages.</em></p>
+  <p>noyo pı tölki völun vos nimü lı xowosë.&emsp;<em>All I want is for you to be happy.</em></p>
 </HisyeoTabs>
 12. ✅ On behalf of.
 <HisyeoTabs>
-  <p>noyo celël cızi oxon niün. <em>I will stand in for him.</em></p>
+  <p>noyo celël cızi oxon niün.&emsp;<em>I will stand in for him.</em></p>
   <p>noyo köto oxon öni pöklön wik.<em>I speak for the Prime Minister.</em></p>
 </HisyeoTabs>
 13. ⛔ In the role or capacity of; instead of; in place of.
 <HisyeoTabs>
-  <p>noyo yön dinci yë kudüdo hülü mıslı miëpıl kon conzodo. <em>I used a hay bale for a bed.</em></p>
-  <p>niün yünyoü ünvünö ziziyo mıslı vos celël düuncit niün oxon nı. <em>He's got a turnip for a brain.</em></p>
+  <p>noyo yön dinci yë kudüdo hülü mıslı miëpıl kon conzodo.&emsp;<em>I used a hay bale for a bed.</em></p>
+  <p>niün yünyoü ünvünö ziziyo mıslı vos celël düuncit niün oxon nı.&emsp;<em>He's got a turnip for a brain.</em></p>
 </HisyeoTabs>
 14. ⛔ In exchange for; in correspondence or equivalence with. 
 <HisyeoTabs>
-  <p>noyo döstoc tiü viyën muni nënko do celël oütö nokdo voxo. <em>I got five hundred pounds for that old car!</em></p>
+  <p>noyo döstoc tiü viyën muni nënko do celël oütö nokdo voxo.&emsp;<em>I got five hundred pounds for that old car!</em></p>
 </HisyeoTabs>
 15. ✅ In order to obtain or acquire.
 <HisyeoTabs>
-  <p>noyo pelëxu oxon mülü do hoi könyëc küngiyo yë lono cınöpu. <em>I am aiming for completion by the end of business Thursday.</em></p>
-  <p>niün pëüdo oxon cëo yë mulö ëto. <em>He's going for his doctorate.</em></p>
-  <p>nimü völun do lı lö oxon iskö ülzo ko. <em>Do you want to go for coffee?</em></p>
-  <p>umo do nıwos hoi möi poxö yë küöcyo Elovo, diyondë si umo Delvi oxon zuwopü. <em>People all over Greece looked to Delphi for answers.</em></p>
-  <p>nimü köi lı lö müt guvuyo oxon yoüti hüwu ko. <em>Can you go to the store for some eggs?</em></p>
-  <p>noyo wëko muni pı söpo oxon oütö. <em>I'm saving up for a car.</em></p>
-  <p>küu motsı yök oxon zuwopü. <em>Don't wait for an answer.</em></p>
-  <p>niün sölü müt nimü oxon zık. <em>What did he ask you for?</em></p>
+  <p>noyo pelëxu oxon mülü do hoi könyëc küngiyo yë lono cınöpu.&emsp;<em>I am aiming for completion by the end of business Thursday.</em></p>
+  <p>niün pëüdo oxon cëo yë mulö ëto.&emsp;<em>He's going for his doctorate.</em></p>
+  <p>nimü völun do lı lö oxon iskö ülzo ko.&emsp;<em>Do you want to go for coffee?</em></p>
+  <p>umo do nıwos hoi möi poxö yë küöcyo Elovo, diyondë si umo Delvi oxon zuwopü.&emsp;<em>People all over Greece looked to Delphi for answers.</em></p>
+  <p>nimü köi lı lö müt guvuyo oxon yoüti hüwu ko.&emsp;<em>Can you go to the store for some eggs?</em></p>
+  <p>noyo wëko muni pı söpo oxon oütö.&emsp;<em>I'm saving up for a car.</em></p>
+  <p>küu motsı yök oxon zuwopü.&emsp;<em>Don't wait for an answer.</em></p>
+  <p>niün sölü müt nimü oxon zık.&emsp;<em>What did he ask you for?</em></p>
 </HisyeoTabs>
 16. ⛔ By the standards of, usually with the implication that those standards are lower than one might otherwise expect; considering.
 <HisyeoTabs>
-  <p>lı üsowo hön woküt nı. <em>Fair for its day.</em></p>
-  <p>niün lı kiösö hön umo wohi nokdo. <em>She's spry for an old lady.</em></p>
-  <p>niün lı ovinë ëto hön düi üsën yë nokdo. <em>He's very mature, for a two-year-old.</em></p>
+  <p>lı üsowo hön woküt nı.&emsp;<em>Fair for its day.</em></p>
+  <p>niün lı kiösö hön umo wohi nokdo.&emsp;<em>She's spry for an old lady.</em></p>
+  <p>niün lı ovinë ëto hön düi üsën yë nokdo.&emsp;<em>He's very mature, for a two-year-old.</em></p>
 </HisyeoTabs>
 17. ⛔ To be, or as being. 
 <HisyeoTabs>
-  <p>küu konzilü yök noyo mıslı umo göwo. <em>Don't take me for a fool.</em></p>
+  <p>küu konzilü yök noyo mıslı umo göwo.&emsp;<em>Don't take me for a fool.</em></p>
 </HisyeoTabs>
 18. ⛔ (usually in the phrase 'for all') Despite, in spite of. 
 <HisyeoTabs>
@@ -298,41 +298,41 @@ entry](https://en.wiktionary.org/wiki/for).
 </HisyeoTabs>
 19. ✅ Indicating something desired or anticipated. 
 <HisyeoTabs>
-  <p>oxon nıxin yë timiok pipök. <em>O for the wings of a dove.</em></p>
-  <p>oxon nıxin vos lı lö vio nu. <em>Ah! for wings to soar …</em></p>
-  <p>hön ipüdü oxon cöüvon yë cëo kut ze. <em>And now for a slap-up meal!</em></p>
+  <p>oxon nıxin yë timiok pipök.&emsp;<em>O for the wings of a dove.</em></p>
+  <p>oxon nıxin vos lı lö vio nu.&emsp;<em>Ah! for wings to soar …</em></p>
+  <p>hön ipüdü oxon cöüvon yë cëo kut ze.&emsp;<em>And now for a slap-up meal!</em></p>
 </HisyeoTabs>
 20. ⛔ (in expressions such as 'for a start') Introducing the first item(s) in a potential sequence .
 <HisyeoTabs>
-  <p>tüu kon dodë vio woyü in pesol nu. hön kut vın ü noyo köi dodë yök löicök. <em>Go scuba diving? For one thing, I can't even swim.</em></p>
-  <p>hön dizel nü yünyoü yök ozüul yön. <em>For another, we don't have any equipment.</em></p>
+  <p>tüu kon dodë vio woyü in pesol nu. hön kut vın ü noyo köi dodë yök löicök.&emsp;<em>Go scuba diving? For one thing, I can't even swim.</em></p>
+  <p>hön dizel nü yünyoü yök ozüul yön.&emsp;<em>For another, we don't have any equipment.</em></p>
 </HisyeoTabs>
 21. ✅ (with names, chiefly US) In honor of; after.
 <HisyeoTabs>
-  <p>somo müt niün oxon motüo motüo niün. <em>He is named for his grandfather.</em></p>
+  <p>somo müt niün oxon motüo motüo niün.&emsp;<em>He is named for his grandfather.</em></p>
 </HisyeoTabs>
 22. ⛔ (UK) Due for or facing (a certain outcome or fate).
 <HisyeoTabs>
-  <p>niün lı ëo kopüt pı mülü ölë mëdüson in ondo ulyö. niün pı ipüdü pono do nocido wëloı niün löicök. <em>He totally screwed up that project. Now he's surely for the sack.</em></p>
+  <p>niün lı ëo kopüt pı mülü ölë mëdüson in ondo ulyö. niün pı ipüdü pono do nocido wëloı niün löicök.&emsp;<em>He totally screwed up that project. Now he's surely for the sack.</em></p>
 </HisyeoTabs>
 23. ⛔ (chiefly US) Out of; used to indicate a fraction, a ratio
 <HisyeoTabs>
-  <p>hön öni kut yë kon xopo poxö ü umo Zönsı lı si son vun nonkü hoi lono. <em>In terms of base hits, Jones was three for four on the day.</em></p>
+  <p>hön öni kut yë kon xopo poxö ü umo Zönsı lı si son vun nonkü hoi lono.&emsp;<em>In terms of base hits, Jones was three for four on the day.</em></p>
 </HisyeoTabs>
 24. ⛔ (cricket) Used as part of a score to indicate the number of wickets that have fallen.
 <HisyeoTabs>
-  <p>hoi könyëc yë kelo ü küöcyo Ingulındu lı son viyën tiü vun son. <em>At close of play, England were 305 for 3.</em></p>
+  <p>hoi könyëc yë kelo ü küöcyo Ingulındu lı son viyën tiü vun son.&emsp;<em>At close of play, England were 305 for 3.</em></p>
 </HisyeoTabs>
 25. ⛔ Used in various more-or-less idiomatic ways to construe individual verbs, indicating various semantic relationships such as target, purpose, result, etc.; see also the entries for individual phrasal verbs, e.g. ask for, look for, stand for, etc.
 <HisyeoTabs>
-  <p>do lı ëo wuktomü ölë poxö vos umo lı si gö hoi <em>to account for one's whereabouts</em></p>
-  <p>do diyondë umo litıwe <em>to care for a relative</em></p>
-  <p>do wovok xön möi düi <em>to settle for second best</em></p>
-  <p>do cülosun voüt <em>to allow for mistakes</em></p>
+  <p>do lı ëo wuktomü ölë poxö vos umo lı si gö hoi&emsp;<em>to account for one's whereabouts</em></p>
+  <p>do diyondë umo litıwe&emsp;<em>to care for a relative</em></p>
+  <p>do wovok xön möi düi&emsp;<em>to settle for second best</em></p>
+  <p>do cülosun voüt&emsp;<em>to allow for mistakes</em></p>
 </HisyeoTabs>
 26. ✅ (nonstandard) So (that), in order to
 <HisyeoTabs>
-  <p>niün gomi si woküt kon wëloı do gıtno lono moliyü pıtün, oxon vos niün köi döstoc eswen woküt otıkon. <em>He took the swing shift for he could get more overtime.</em></p>
+  <p>niün gomi si woküt kon wëloı do gıtno lono moliyü pıtün, oxon vos niün köi döstoc eswen woküt otıkon.&emsp;<em>He took the swing shift for he could get more overtime.</em></p>
 </HisyeoTabs>
 
 :::
@@ -384,7 +384,7 @@ detail, or a condition for the underlying sentence. In English, this represents
 some of the senses of the words "regarding", "given", "as for", and "when".
 
 <HisyeoTabs>
-  <p>noyo yünyoü sölü hön zuwopü ılık. <em>"I have a question regarding your earlier answers."</em></p>
+  <p>noyo yünyoü sölü hön zuwopü ılık.&emsp;<em>"I have a question regarding your earlier answers."</em></p>
 </HisyeoTabs>
 
 Also, when you would like to utilize an adjective complement to complete the
@@ -392,7 +392,7 @@ meaning of a subject complete (<HisyeoWord is='lı'/>), you would place the
 complement in a <HisyeoWord is='hön'/> NP.
 
 <HisyeoTabs>
-  <p>noyo lı xowosë hön vos nimü köto si ulyö. <em>"I am happy that you said that"</em></p>
+  <p>noyo lı xowosë hön vos nimü köto si ulyö.&emsp;<em>"I am happy that you said that"</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
@@ -402,7 +402,7 @@ topic/context that is something other than the marked noun phrase. In English,
 this represents some of the senses of the word "regardless".
 
 <HisyeoTabs>
-  <p>umo Depölo mokon si ünvünö nomü hön yök longı nı. <em>"Deborah ate the broccoli regardless its color."</em></p>
+  <p>umo Depölo mokon si ünvünö nomü hön yök longı nı.&emsp;<em>"Deborah ate the broccoli regardless its color."</em></p>
 </HisyeoTabs>
 
 ### Counter-Agent
@@ -415,8 +415,8 @@ verbs that indicates an opposing agent for verbs that indicate an action that is
 English, this represents some of the senses of the word "against".
 
 <HisyeoTabs>
-  <p>nı lı tüu kutın hön do oütö pı ximu vio woyü dën pono woyü. <em>"It is hard work to sail against the wind."</em></p>
-  <p>nimü dën völni yë göcidon ko. <em>"Are you against freedom of choice?"</em></p>
+  <p>nı lı tüu kutın hön do oütö pı ximu vio woyü dën pono woyü.&emsp;<em>"It is hard work to sail against the wind."</em></p>
+  <p>nimü dën völni yë göcidon ko.&emsp;<em>"Are you against freedom of choice?"</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
@@ -434,8 +434,8 @@ occur. In English, this represents some of the senses of the phrases "or so",
 "per", and "according to". 
 
 <HisyeoTabs>
-  <p>hoi mötö xopëk onö ü niün lı si tönkö mötö oldıs vos dizel köto. <em>"He was burned in the fire or so they say"</em></p>
-  <p>oldıs yöcno kon köson ü voko ünidü pılit di ülgükin hoi düi dus nonkü suhot. <em>"According to the directions, the glue takes 24 hours to dry"</em></p>
+  <p>hoi mötö ılık onö ü niün lı si tönkö mötö oldıs vos dizel köto.&emsp;<em>He was burned in the fire or so they say.</em></p>
+  <p>oldıs yöcno kon köson ü voko ünidü pılit di ülgükin hoi düi dus nonkü suhot.&emsp;<em>According to the directions, the glue takes 24 hours to dry.</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
@@ -453,9 +453,9 @@ finite physical space or actual time periods. In English, this represents some
 of the senses of the word "for".
 
 <HisyeoTabs>
-  <p>noyo köi dëko lon yoüti öni kut cënpö yë zoük. <em>"I can see for kilometres"</em></p>
-  <p>nimü lı gö lon üsën zık. <em>"How old are you?"</em></p>
-  <p>niün köntësto vio köto lon yoüti lono hön döcui. <em>They argued for days over a toy.</em></p>
+  <p>noyo köi dëko lon yoüti öni kut cënpö yë zoük.&emsp;<em>"I can see for kilometres"</em></p>
+  <p>nimü lı gö lon üsën zık.&emsp;<em>"How old are you?"</em></p>
+  <p>niün köntësto vio köto lon yoüti lono hön döcui.&emsp;<em>They argued for days over a toy.</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
@@ -473,7 +473,7 @@ boundaries in time or space that the action occurs between. In English, this
 represents some of the senses of the word "between".
 
 <HisyeoTabs>
-  <p>köi mokon ü noyo cö wutun yë hövezi gemolen et do gıtno piek. <em>"I could eat a hamburger."</em></p>
+  <p>köi mokon ü noyo cö wutun yë hövezi gemolen et do gıtno piek.&emsp;<em>"I could eat a hamburger."</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
@@ -492,8 +492,8 @@ of the senses of the words "like" and "as". When used with a subordinate clause,
 it can also represent the English phrase "as if".
 
 <HisyeoTabs>
-  <p>xoinpo dëko ü loı mıslı sıskın loı. <em>"He looks like his brother."</em></p>
-  <p>si tüu cö künhiun pis ü umo moskül nokdo mıslı do ke zigil. <em>"The old man stumbled, as if he were about to fall."</em></p>
+  <p>xoinpo dëko ü loı mıslı sıskın loı.&emsp;<em>"He looks like his brother."</em></p>
+  <p>si tüu cö künhiun pis ü umo moskül nokdo mıslı do ke zigil.&emsp;<em>"The old man stumbled, as if he were about to fall."</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
@@ -501,7 +501,7 @@ marked noun phrase is not a likeness of the action or state of the predicate. In
 English, the word "unlike" would be an equivalent.
 
 <HisyeoTabs>
-  <p>mıslı yök nimü lı yök öni cıvulo yë xön ëto ü noyo. <em>"Unlike you, I'm not a great dancer."</em></p>
+  <p>mıslı yök nimü lı yök öni cıvulo yë xön ëto ü noyo.&emsp;<em>"Unlike you, I'm not a great dancer."</em></p>
 </HisyeoTabs>
 
 ### Genitive
@@ -513,8 +513,8 @@ in some contextually dependent manner. In English, this represents some of the
 senses of the word "of".
 
 <HisyeoTabs>
-  <p>niün pı xoinpo lı vonmot yë kon konzilü umo. <em>"He seemed devoid of human feelings."</em></p>
-  <p>pëmon in cukto köi di niltügu hoi ozüul woküt hön pëmon yë möi düi zomo. <em>"The contract can be terminated at any time with the agreement of both parties."</em></p>
+  <p>niün pı xoinpo lı vonmot yë kon konzilü umo.&emsp;<em>"He seemed devoid of human feelings."</em></p>
+  <p>pëmon in cukto köi di niltügu hoi ozüul woküt hön pëmon yë möi düi zomo.&emsp;<em>"The contract can be terminated at any time with the agreement of both parties."</em></p>
 </HisyeoTabs>
 
 This particle isn't used with the negatitive particle <HisyeoWord is='yök'/>
@@ -545,7 +545,7 @@ preposition phrase (as long as it's a content word, other prepositions can cause
 argument to be skipped).
 
 <HisyeoTabs>
-  <p>wölık nëlö pön küyö <em>"Black clouds cause sadness."</em></p>
+  <p>wölık nëlö pön küyö&emsp;<em>"Black clouds cause sadness."</em></p>
 </HisyeoTabs>
 
 
@@ -588,7 +588,7 @@ expressed by the inner sentence but referred holisitically as an object in the
 outer sentence.
 
 <HisyeoTabs>
-  <p>lı ëo govon ölë noyo ü <strong>do</strong> cöüvon micin. <em>"Cooking fish makes me disgusted"</em></p>
+  <p>lı ëo govon ölë noyo ü <strong>do</strong> cöüvon micin.&emsp;<em>"Cooking fish makes me disgusted"</em></p>
 </HisyeoTabs>
 
 
@@ -623,8 +623,8 @@ with some form of noun clause as their object and this form allows for a
 complete sentence to be included as that object.
 
 <HisyeoTabs>
-  <p>noyo völun vos nimü völun noyo <em>"I want you to want me"</em></p>
-  <p>noyo xiwon vos lı suhot tiü <em>"I wish that it was 5 o'clock"</em></p>
+  <p>noyo völun vos nimü völun noyo&emsp;<em>"I want you to want me"</em></p>
+  <p>noyo xiwon vos lı suhot tiü&emsp;<em>"I wish that it was 5 o'clock"</em></p>
 </HisyeoTabs>
 
 
