--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -104,8 +104,8 @@ Add one of these before your noun and you have provided a quantity determiner (a
 cardinal number).
 
 <HisyeoTabs>
-  <p>cok ü son sütüö sün zomo. <em>"Three friends are leaving the group."</em></p>
-  <p>puswen ü ni cö son dus tiü ëvun oxon do piek cö piek süwit övo. <em>"We need 35 minutes to bake this cake."</em></p>
+  <p>cok ü son sütüö sün zomo.&emsp;<em>"Three friends are leaving the group."</em></p>
+  <p>puswen ü ni cö son dus tiü ëvun oxon do piek cö piek süwit övo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
 </HisyeoTabs>
 
 Providing a quantity determiner of "one" (<HisyeoWord is='kut'/>) can be used as a kind of
@@ -117,8 +117,8 @@ Place a number word as a regular modifier (after the head noun) and it will
 represent a relative position of an item in a sequence (an ordinal number).
 
 <HisyeoTabs>
-  <p>nomü son do sün ximol ü süko noyo. <em>"The third tree from the left is my favorite."</em></p>
-  <p>ü noyo lı umo nonkü do si cok. <em>"I was the fourth person to leave."</em></p>
+  <p>nomü son do sün ximol ü süko noyo.&emsp;<em>"The third tree from the left is my favorite."</em></p>
+  <p>ü noyo lı umo nonkü do si cok.&emsp;<em>"I was the fourth person to leave."</em></p>
 </HisyeoTabs>
 
 ### Multiplier
@@ -127,8 +127,8 @@ Place a number word after (<HisyeoWord is='öni'/>) and use this as a modifier t
 represent the number of times something is to be multiplied.
 
 <HisyeoTabs>
-  <p>yünyoü ü poholon cö zınkon öni düi. <em>"The closet has double doors."</em></p>
-  <p>kiösö ëto ü loı köi tüu opunyun cö zoston öni nonkü. <em>"He's quite athletic and can do quadruple jumps with ease."</em></p>
+  <p>yünyoü ü poholon cö zınkon öni düi.&emsp;<em>"The closet has double doors."</em></p>
+  <p>kiösö ëto ü loı köi tüu opunyun cö zoston öni nonkü.&emsp;<em>"He's quite athletic and can do quadruple jumps with ease."</em></p>
 </HisyeoTabs>
 
 ### Adverbial
@@ -137,8 +137,8 @@ Place a number word before the head word of a verb phrase to represent that the
 action of the verb phrase occurred a certain number of times.
 
 <HisyeoTabs>
-  <p>si kut mokon tölki ü noyo cö piek potuk yë öni mulö <em>"I have only once eaten pizza"</em></p>
-  <p>küu düi yön ü nimü cö sikot hoköli hön xokön lono. <em>You should use your toothbrush twice a day.</em></p>
+  <p>si kut mokon tölki ü noyo cö piek potuk yë öni mulö&emsp;<em>"I have only once eaten pizza"</em></p>
+  <p>küu düi yön ü nimü cö sikot hoköli hön xokön lono.&emsp;<em>You should use your toothbrush twice a day.</em></p>
 </HisyeoTabs>
 
 ### Distributive
@@ -154,10 +154,10 @@ numerical quantities but with a non-exact non-finite understanding of what the
 exact numerical quantity the noun actually is. 
 
 <HisyeoTabs>
-  <p><strong>yoüti</strong>: süko ü yoüti umo cö kon mühoyon. <em>"Some people like camping."</em></p>
-  <p><strong>ëto</strong>: ëto toliko xönë yë do cöüvon cö cöüvon. <em>"There are many different ways to cook a meal."</em></p>
-  <p><strong>mënüs</strong>: mënüs umo hoi övo ipüdü. <em>"There are less people here now."</em></p>
-  <p><strong>eswen</strong>: eswen toliko yë do tüu cö övo, en vos köi tüek vio kut ü noyo. <em>"There are more ways to do this than I can count."</em></p>
+  <p><strong>yoüti</strong>: süko ü yoüti umo cö kon mühoyon.&emsp;<em>"Some people like camping."</em></p>
+  <p><strong>ëto</strong>: ëto toliko xönë yë do cöüvon cö cöüvon.&emsp;<em>"There are many different ways to cook a meal."</em></p>
+  <p><strong>mënüs</strong>: mënüs umo hoi övo ipüdü.&emsp;<em>"There are less people here now."</em></p>
+  <p><strong>eswen</strong>: eswen toliko yë do tüu cö övo, en vos köi tüek vio kut ü noyo.&emsp;<em>"There are more ways to do this than I can count."</em></p>
 </HisyeoTabs>
 
 There's also the universal classifications of "every" and "each". These allow
