--- a/docs/reference/word_types/verbs.mdx
+++ b/docs/reference/word_types/verbs.mdx
@@ -19,8 +19,8 @@ nothing changes about the verb phrase (although the subject now must be
 introduced with either <HisyeoWord is='ü'/> or <HisyeoWord is='ölë'/>).
 
 <HisyeoTabs>
-    <p>noyo mokon küöxı. <em>"I ate a fruit."</em></p>
-    <p>mokon küöxı ü noyo. <em>"A fruit was eaten by me."</em></p>
+    <p>noyo mokon küöxı.&emsp;<em>"I ate a fruit."</em></p>
+    <p>mokon küöxı ü noyo.&emsp;<em>"A fruit was eaten by me."</em></p>
 </HisyeoTabs>
 
 :::caution Passivity
@@ -50,8 +50,8 @@ are usually considered to be imperfective and not perfect (since there is a
 particle that can specify that the action is perfect).
 
 <HisyeoTabs>
-    <p>hoi woküt zık ü nü mokon hoi pıtün cokyen övo.  <em>What time are we eating this evening?</em></p>
-    <p>vonolon lunsol ipüwë müt noyo.  <em>The monkey is throwing rocks at me.</em></p>
+    <p>hoi woküt zık ü nü mokon hoi pıtün cokyen övo.&emsp;<em>What time are we eating this evening?</em></p>
+    <p>vonolon lunsol ipüwë müt noyo.&emsp;<em>The monkey is throwing rocks at me.</em></p>
 </HisyeoTabs>
 
 ### Irrealis
@@ -72,19 +72,19 @@ that the subject was definitely capable of completing the action. When used to
 frame the predicate of a question, it has the effect of asking for permission.
 
 <HisyeoTabs>
-    <p>hoi ılık vos noyo lı dës dëko, ü noyo köi dëko pı xön ëto. <em>Before I was blind, I could see very well.</em></p>
-    <p>noyo goniso vos niün köi tüu nı hön vos niün völun pı hokiki. <em>I think he could do it if he really wanted to.</em></p>
-    <p>noyo xiwon do köi lı xikö ze. <em>I wish I could fly!</em></p>
-    <p>noyo köi yön öntön tetëk mulö pı ilxizuk ko. <em>Could I borrow your coat?</em></p>
-    <p>noyo köi sıtyo hoı ulyö ko. <em>May I sit there?</em></p>
-    <p>mocko yë umo Xılödingu köi lı gö yodo köi lı yök gö hoi dıpo dinci. <em>Schrödinger's cat may or may not be in the box</em></p>
-    <p>nimü köi köto si pı hüsü yë pökpün <em>You might have warned me about the thunderstorm.</em></p>
-    <p>noyo köi lı lö müt köndodü lëkın noyo göcidon si yök pı pıslon. <em>I might go to the party, but I haven't decided yet.</em></p>
-    <p>noyo köi lı gö hoi sıtyo küldü lëkin noyo pı yotkuwo völun vos wëilun müt noyo mıslı umo wohi. <em>I might be in a wheelchair, but I still want to be treated as a lady.</em></p>
-    <p>noyo köi gomi piek potuk süwit vëlcin. <em>Might I take the last biscuit?</em></p>
-    <p>nü köi puswen vın do lı len eswen yoüti ci. <em>Yeah, I think we might need something a bit sturdier.</em></p>
-    <p>nimü köi tenkin ulyö ko. <em>Can you hear that?</em></p>
-    <p>niün köi köto vio hiskünco Ingulıc, Vulonsë, moliyü Döic. <em>She can speak English, French, and German.</em></p>
+    <p>hoi ılık vos noyo lı dës dëko, ü noyo köi dëko pı xön ëto.&emsp;<em>Before I was blind, I could see very well.</em></p>
+    <p>noyo goniso vos niün köi tüu nı hön vos niün völun pı hokiki.&emsp;<em>I think he could do it if he really wanted to.</em></p>
+    <p>noyo xiwon do köi lı xikö ze.&emsp;<em>I wish I could fly!</em></p>
+    <p>noyo köi yön öntön tetëk mulö pı ilxizuk ko.&emsp;<em>Could I borrow your coat?</em></p>
+    <p>noyo köi sıtyo hoı ulyö ko.&emsp;<em>May I sit there?</em></p>
+    <p>mocko yë umo Xılödingu köi lı gö yodo köi lı yök gö hoi dıpo dinci.&emsp;<em>Schrödinger's cat may or may not be in the box</em></p>
+    <p>nimü köi köto si pı hüsü yë pökpün&emsp;<em>You might have warned me about the thunderstorm.</em></p>
+    <p>noyo köi lı lö müt köndodü lëkın noyo göcidon si yök pı pıslon.&emsp;<em>I might go to the party, but I haven't decided yet.</em></p>
+    <p>noyo köi lı gö hoi sıtyo küldü lëkin noyo pı yotkuwo völun vos wëilun müt noyo mıslı umo wohi.&emsp;<em>I might be in a wheelchair, but I still want to be treated as a lady.</em></p>
+    <p>noyo köi gomi piek potuk süwit vëlcin.&emsp;<em>Might I take the last biscuit?</em></p>
+    <p>nü köi puswen vın do lı len eswen yoüti ci.&emsp;<em>Yeah, I think we might need something a bit sturdier.</em></p>
+    <p>nimü köi tenkin ulyö ko.&emsp;<em>Can you hear that?</em></p>
+    <p>niün köi köto vio hiskünco Ingulıc, Vulonsë, moliyü Döic.&emsp;<em>She can speak English, French, and German.</em></p>
 </HisyeoTabs>
 
 #### Conditional (*what would be*)
@@ -94,14 +94,14 @@ predicate occurring is dependent on some other circumstance that is either
 explicitly described or implied.
 
 <HisyeoTabs>
-    <p>hoi lono kut yë poxö kon pëüdo ü noyo monodo umo wohi do pit di hünsüon noyo. <em>On my first day at University, I met the woman who would become my wife.</em></p>
-    <p>hön vos noyo lı pilüs hoi do köntësto oxon yoküntik, ü noyo pit cüdo vun düi muni müt küngiyo yöüli. <em>If I won the lottery, I would give half the money to charity.</em></p>
-    <p>noyo pit yüpik do lı lö monodo. <em>I would love to come and visit.</em></p>
-    <p>küu dëko piek süwit yë sopölë xön ëto ze. noyo pit mokon möi ulyö pı mülü ze. <em>Look at that yummy cake! I would eat that all up!</em></p>
-    <p>noyo müt nimü pit sölü do sityo pı koli. <em>I would ask you all to sit down.</em></p>
-    <p>noyo müt goniso vos niün lı si cok pı ılık. <em>I would imagine that they have already left.</em></p>
-    <p>niün lı köxentë yë mevüs oxon vos niün pit punyentoc si do pesol zınkon. <em>He's very security-conscious, so he would have remembered to lock the door.</em></p>
-    <p>niün pit lı gö hoi sınsi Lundun pı ipüdü cokyen. <em>They would be arriving in London round about now.</em></p>
+    <p>hoi lono kut yë poxö kon pëüdo ü noyo monodo umo wohi do pit di hünsüon noyo.&emsp;<em>On my first day at University, I met the woman who would become my wife.</em></p>
+    <p>hön vos noyo lı pilüs hoi do köntësto oxon yoküntik, ü noyo pit cüdo vun düi muni müt küngiyo yöüli.&emsp;<em>If I won the lottery, I would give half the money to charity.</em></p>
+    <p>noyo pit yüpik do lı lö monodo.&emsp;<em>I would love to come and visit.</em></p>
+    <p>küu dëko piek süwit yë sopölë xön ëto ze. noyo pit mokon möi ulyö pı mülü ze.&emsp;<em>Look at that yummy cake! I would eat that all up!</em></p>
+    <p>noyo müt nimü pit sölü do sityo pı koli.&emsp;<em>I would ask you all to sit down.</em></p>
+    <p>noyo müt goniso vos niün lı si cok pı ılık.&emsp;<em>I would imagine that they have already left.</em></p>
+    <p>niün lı köxentë yë mevüs oxon vos niün pit punyentoc si do pesol zınkon.&emsp;<em>He's very security-conscious, so he would have remembered to lock the door.</em></p>
+    <p>niün pit lı gö hoi sınsi Lundun pı ipüdü cokyen.&emsp;<em>They would be arriving in London round about now.</em></p>
 </HisyeoTabs>
 
 :::info The different conditional classifications of English
@@ -118,8 +118,8 @@ differentiation of syntax occurs in Hisyëö.
   or the time marker (<HisyeoWord is='hoi'/>) to indicate the condition.
 
 <HisyeoTabs>
-    <p>hön vos gongoxi öitun, lı mötö hoi poxö yë limien ilë. <em>If the alarm goes off, there's a fire somewhere in the building.</em></p>
-    <p>hön vos nimü lı ëo voüt, umo vısun ëo ölë nimü. <em>If you make a mistake, someone lets you know.</em></p>
+    <p>hön vos gongoxi öitun, lı mötö hoi poxö yë limien ilë.&emsp;<em>If the alarm goes off, there's a fire somewhere in the building.</em></p>
+    <p>hön vos nimü lı ëo voüt, umo vısun ëo ölë nimü.&emsp;<em>If you make a mistake, someone lets you know.</em></p>
 </HisyeoTabs>
 
 - **First conditional**: These conditionals are sentences thot regard the
@@ -131,10 +131,10 @@ differentiation of syntax occurs in Hisyëö.
   is='si'/>) or an imperative (<HisyeoWord is='küu'/>) on the consequence.
 
 <HisyeoTabs>
-    <p>hön vos niün sölü müt noyo, noyo ke vohoso pësnëhot niün pı diyondë ëto. <em>If he asks me, I will consider his proposal carefully.</em></p>
-    <p>hön vos nimü lı ëo voüt, umo ke vısun ëo ölë nimü. <em>If you make a mistake, someone will let you know.</em></p>
-    <p>hoi hüzon yë lono mutyu cıhöü küu lı lö müt poxö noyo. <em>If it rains this afternoon, come round to my place!</em></p>
-    <p>hön vos nimü lı cok ipüdü, nimü ke monodo  <em>If you leave now, you will still catch your train.</em></p>
+    <p>hön vos niün sölü müt noyo, noyo ke vohoso pësnëhot niün pı diyondë ëto.&emsp;<em>If he asks me, I will consider his proposal carefully.</em></p>
+    <p>hön vos nimü lı ëo voüt, umo ke vısun ëo ölë nimü.&emsp;<em>If you make a mistake, someone will let you know.</em></p>
+    <p>hoi hüzon yë lono mutyu cıhöü küu lı lö müt poxö noyo.&emsp;<em>If it rains this afternoon, come round to my place!</em></p>
+    <p>hön vos nimü lı cok ipüdü, nimü ke monodo&emsp;<em>If you leave now, you will still catch your train.</em></p>
 </HisyeoTabs>
 
 - **Second conditional**: These conditionals are sentences used to describe
@@ -142,9 +142,9 @@ differentiation of syntax occurs in Hisyëö.
   **future** tense.
 
 <HisyeoTabs>
-    <p>hön vos noyo süko köndodü, ü noyo pit lı gö hoi eswen niün. <em>If I liked parties, I would attend more of them.</em></p>
-    <p>hön vos lı hüzon hoi lono uklo, ü umo pit lı cıvulo hoi titon. <em>If it rained tomorrow, people would dance in the street.</em></p>
-    <p>hön vos nimü lı cok pı ipüdü, ü nimü pı guvıs pit doicël oütö kiskö nimü. <em>If you left now, you would still catch your train.</em></p>
+    <p>hön vos noyo süko köndodü, ü noyo pit lı gö hoi eswen niün.&emsp;<em>If I liked parties, I would attend more of them.</em></p>
+    <p>hön vos lı hüzon hoi lono uklo, ü umo pit lı cıvulo hoi titon.&emsp;<em>If it rained tomorrow, people would dance in the street.</em></p>
+    <p>hön vos nimü lı cok pı ipüdü, ü nimü pı guvıs pit doicël oütö kiskö nimü.&emsp;<em>If you left now, you would still catch your train.</em></p>
 </HisyeoTabs>
 
 - **Third conditional**: These conditionals are sentences used to describe
@@ -153,8 +153,8 @@ differentiation of syntax occurs in Hisyëö.
   conditional perfect.
 
 <HisyeoTabs>
-    <p>hön vos nimü xokülü si noyo, ü noyo pit lı si lö. <em>If you had called me, I would have come.</em></p>
-    <p>niün pit lı si pilüs hön vos noyo lı si yöüli müt niün. <em>Would he have succeeded if I had helped him?</em></p>
+    <p>hön vos nimü xokülü si noyo, ü noyo pit lı si lö.&emsp;<em>If you had called me, I would have come.</em></p>
+    <p>niün pit lı si pilüs hön vos noyo lı si yöüli müt niün.&emsp;<em>Would he have succeeded if I had helped him?</em></p>
 </HisyeoTabs>
 
 - **Mixed conditional**: These conditionals are a mixture of the second and
@@ -169,18 +169,28 @@ differentiation of syntax occurs in Hisyëö.
   conditional).
 
 <HisyeoTabs>
-    <p>hön vos nimü tüu si wëloı pı dündon, nü pit yünyoü yök ixölö övo pı ipüdü.  <em>If you had done your job properly, we wouldn't be in this mess now.</em></p>
-    <p>hön vos noyo lı si ëo hünsüon ölë umo Keli, noyo pit niwos yök hoi küöcyo Elvu pı ipüdü. <em>If I hadn't married Kelly, I wouldn't be living in Scotland now.</em></p>
-    <p>hön vos nü lı umo güexo pı ılik, nü pit tüu si yök nı mıslı ulyö. <em>If we were soldiers, we wouldn't have done it like that.</em></p>
+    <p>hön vos nimü tüu si wëloı pı dündon, nü pit yünyoü yök ixölö övo pı ipüdü.&emsp;<em>If you had done your job properly, we wouldn't be in this mess now.</em></p>
+    <p>hön vos noyo lı si ëo hünsüon ölë umo Keli, noyo pit niwos yök hoi küöcyo Elvu pı ipüdü.&emsp;<em>If I hadn't married Kelly, I wouldn't be living in Scotland now.</em></p>
+    <p>hön vos nü lı umo güexo pı ılik, nü pit tüu si yök nı mıslı ulyö.&emsp;<em>If we were soldiers, we wouldn't have done it like that.</em></p>
 </HisyeoTabs>
 
 :::
 
 #### Deontic (*what should be*)
 
-Finally, we have the deontic verb marker (<HisyeoWord is='küu'/>) which is
-indicates that the writer/speaker believes the predicate should or ought to be
-happen.
+To indicate that something should be or ought to be, you would use the deontic
+verb marker (<HisyeoWord is='küu'/>). It indicates that the true state of things
+(realis) doesn't match what the speaker expects, believes or desires. A sentence
+with the deontic verb marker generally indicates what action could be taken to
+rectify the state of things.
+
+<HisyeoTabs>
+    <p>noyo küu lı yöüli müt nimü.&emsp;<em>I ought to help you.</em></p>
+    <p>nü küu lı lö ze.&emsp;<em>Let's go!</em></p>
+    <p>küu gomi oksün ulyö.&emsp;<em>Don't take that meat.</em></p>
+    <p>ü yüpik noyo küu lı gö ovek nimü lötven.&emsp;<em>May my love be with you.</em></p>
+</HisyeoTabs>
+
 
 ### Future
 
@@ -190,9 +200,16 @@ the sentence, this marker indicates that the predicate will occur in the future.
 This marker (<HisyeoWord is='ke'/>) indicates what linguists call the **future
 tense**.
 
+<HisyeoTabs>
+    <p>umo Zon ke lı cok hoı pıtün övo.&emsp;<em>John is going to leave tonight.</em></p>
+    <p>noyo ke golo tömös onö.&emsp;<em>I will/shall read the book</em></p>
+    <p>nü küu vohoso ulyö, nü ke tüu ko. &emsp;<em>Let us examine that, shall we?</em></p>
+    <p>kut yë umo kölmüdul ke monodo nimü hoi lono uklo.&emsp;<em>One of our salesmen will visit you tomorrow.</em></p>
+</HisyeoTabs>
+
 ## From...
 
-Converting from the other content types into verbs.
+Converting from the other content types into verbs isn't possible.
 
 ### Nouns
 
@@ -203,15 +220,17 @@ being some noun. This has the effect of meaning "is a [noun]" in English.
 
 ### Modifiers
 
-When a modifier acts as a verb, it means that predicate will be *copulative*,
-meaning that the verb is a combination of the English verb "be" followed by that
-modifier. This is called a **modifier complement**. The subject is being
-described as being some modifier. This has the effect of meaning "is [modifier]"
-in English.
+A modifier cannot act as a verb, it must be provided with the subject complement
+marker (<HisyeoWord is='lı'/>). This is called a **modifier complement**. The
+subject is being described as being some modifier (in some state). This has the
+effect of meaning "is [adjective]" in English.
 
 ## Verb Modifiers
 
-There are three **verb modifiers** that can be mixed-and-matched in a verb phrase.
+There are three **verb modifiers** that can be mixed-and-matched in a verb
+phrase. They always follow the verb itself (not the verb marker) and they
+precede the direct object. The verb marker and the set of verb modifiers circumfix the
+verb.
 
 ### Negatitive
 
